--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ colored = "2"
 clap = { version = "3.2.19"}
 dotenv = "0.15.0"
 indicatif = "0.16.2"
+regex = "1.6.0"
 strfmt = "0.2.2"
 tokio = { version = "1.20.1", features = ["full"] }
