--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 edition = "2021"
 name = "pipeview"
-version = "0.0.1"
-description = "Reserved."
+version = "0.1.0"
+description = "A command line pipe inspection utility."
 categories = ["command-line-utilities", "visualization"]
 keywords = ["pipe", "meter", "gauge"]
 license = "MIT"
