--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 edition = "2021"
 name = "pipeview"
-version = "0.1.1"
+version = "0.1.3"
 description = "🧪 A command line pipe inspection utility."
 categories = ["command-line-utilities", "visualization"]
 keywords = ["pipe", "meter", "gauge"]
+repository = "https://github.com/mihaigalos/pipeview"
 license = "MIT"
 resolver = "2"
 
