--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ resolver = "2"
 [dependencies]
 anyhow = "1.0.75"
 autoclap = "0.3.15"
-clap = { version = "4.4.6", features = ["string"]}
+clap = { version = "4.4.6", features = ["string", "derive"]}
 crossterm = "0.28.1"
 colored = "2"
 dirs = "5"
