--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ resolver = "2"
 
 [dependencies]
 anyhow = "1.0.75"
+atty = "0.2.14"
 autoclap = "0.3.15"
 clap = { version = "4.4.6", features = ["string", "derive"]}
 crossterm = "0.28.1"
