--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,10 @@ serde_derive = "1.0.189"
 strfmt = "0.2.4"
 tokio = { version = "1.33.0", features = ["full"] }
 toml = "0.9.0"
+
+[dev-dependencies]
+tempfile = "3.8"
+
+[[test]]
+name = "flush_fix_integration"
+path = "test/flush_fix_integration.rs"
