feat: Logic - Progress bar

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ colored = "2"
 dirs = "5"
 dotenv = "0.15.0"
 indicatif = "0.18.0"
+libc = "0.2"
 regex = "1.10.2"
 serde = "1.0.189"
 serde_derive = "1.0.189"
